tests/invalid/ListAccess_Invalid_1.whiley
function f(int[] xs, real y) -> int:
    return xs[y]
